--- a/style.css
+++ b/style.css
@@ -1,11 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap');
-*{
+*
+{
     margin:0;
     padding: 0 ;
     box-sizing:  border-box;
     text-decoration: none;
 
 }
+/* scrool bar personalizada*/
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track{
+    background:#b41b1b;
+    border-radius: 30px;
+}
+::-webkit-scrollbar-thumb{
+    background: slategrey;
+    border-radius: 30px;
+}
+
 .max-width{
     max-width: 13000px;
     padding:  0 80px;
@@ -98,24 +112,12 @@
     margin-top: 20px;
     border-radius: 6px;
     border: 2px solid #b41b1b;
+    transition: all 0.3s ease;
 }
 .home .home-content a:hover{
     color:#b41b1b;
     background: none;
 }
-/* scrool bar personalizada*/
-::-webkit-scrollbar{
-    width: 10px;
-}
-::-webkit-scrollbar-track{
-    background:#b41b1b;
-    border-radius: 30px;
-}
-::-webkit-scrollbar-thumb{
-    background: slategrey;
-    border-radius: 30px;
-}
-
 /* menu para celular*/
 .menu-btn{
     color:#fff;
@@ -180,6 +182,11 @@
         font-size: 30px;
     
     }
+    .home .home-content a{
+        font-size: 23px;
+        padding: 10px 30px;
+
+    }
 }
 @media (max-width: 690px){
     .max-width{
@@ -191,57 +198,18 @@
     .home .home-content .text-3{
         font-size: 32px;
     
-    }
-}
-/*@media (max-width:947px){
-    .max-width{
-        padding: 0 50px;
+    }.home .home-content a{
+        font-size: 20px;
+        padding: 9px 25px;
 
-    }
-    .menu-btn{
-        display: block;
-        z-index: 999;
-    }
-    .navbar .menu{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        left: -100%;
-        top: 0;
-        background: #111;
-        padding-top: 80px;
-        text-align: center;
-        transition:  all 0.3s ease;
-    }
-    .navbar .menu li{
-        display: block;
-    }
-    .navbar .menu li a{
-        display: inline-block;
-        margin: 20px 0;
-        font-size: 25px;
-    }
-    .home .home-content .text-2{
-        font-size: 70px; 
-    }
-    .home .home-content .text-3{
-        font-size: 35px;
-    }
-}
-*/
-/*@media (max-width: 690px){
-    .home .home-content .text-2{
-        font-size: 60px; 
-    }
-    .home .home-content .text-3{
-        font-size: 32px;
     }
 }
 @media (max-width: 500px){
+
     .home .home-content .text-2{
-        font-size: 50px; 
+        font-size: 50px;     
     }
     .home .home-content .text-3{
-        font-size: 27px;
+        font-size: 27px; 
     }
-}*/ 
+}
