--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
     position:fixed;
     width:100%;
     padding: 30px 0;
+    z-index: 999;
     /*background:#b41b1b;*/
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     transition: all 0.3s ease;
@@ -118,6 +119,101 @@
     color:#b41b1b;
     background: none;
 }
+ 
+/*secao sobre*/
+section{
+    padding: 100px 0px;
+}
+.about{
+    font-family: 'Poppins',Arial, sans-serif;
+}
+
+.about .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500px;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.about .title::before{
+    content: "";
+    position:absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height:3px;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+.about .title::after{
+    content: "Quem eu sou";
+    position:absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    color:#b41b1b;
+    padding: 5px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+.about .about-content{
+    display:flex ;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.about .about-content .left{
+    width: 45%;
+    
+}
+.about .about-content .left img{
+    height:400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;    
+}
+.about .about-content .right{
+    width: 55%;
+
+}
+.about .about-content .right .text{
+    width: 55%;
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.about .about-content .right .text span{
+    color:#b41b1b
+}
+.about .about-content .right p{
+    text-align: justify;
+}
+.about .about-content .right a{
+    display: inline-block;
+    background: #b41b1b;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 36px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #b41b1b;
+    transition: all 0.3s ease;
+}
+.about .about-content .right a:hover{
+    color:#b41b1b;
+    background: none;
+}
+
+
+
+
+
+
 /* menu para celular*/
 .menu-btn{
     color:#fff;
@@ -128,15 +224,15 @@
 }
 
 /*responsivo*/
-/*@media (max-width: 1104px){
-    .navbar .max-width{
-        margin-left: 0;
-    }
-     
-}*/
-@media (max-width: 1104px){
+@media (max-width: 1300px){
     .home .max-width{
         margin-left: 0px;
+    }
+}
+@media (max-width: 1104px){
+    .about .about-content .left img{
+        height:350px;
+        width: 350px;
     }
 
 }@media (max-width: 991px){
@@ -187,6 +283,22 @@
         padding: 10px 30px;
 
     }
+    .max-width{
+        max-width: 800px;
+    }
+    .about .about-content .column{
+        width: 100%;
+    }
+    .about .about-content .left{
+        justify-content: center;
+        display: flex;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right{
+        flex: 100%;
+
+    }
+
 }
 @media (max-width: 690px){
     .max-width{
@@ -203,6 +315,7 @@
         padding: 9px 25px;
 
     }
+    
 }
 @media (max-width: 500px){
 
